--- a/test_lint/Cargo.toml
+++ b/test_lint/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-plinter_api = { path = "../plinter_api" }
+pluggy_api = { path = "../pluggy_api" }
 # driver = { path = "../driver" }
 
 [lib]
